--- a/Source/thebot/src/views/index.jade
+++ b/Source/thebot/src/views/index.jade
@@ -7,4 +7,7 @@ html
     link(rel='stylesheet' href='/css/style.css')
   body
     div#app
+    p.tagline Powered by Gibbr!
+    a(target='_blank', href='https://messenger.com')
+      img.img-responsive.buttonimage(src='https://www.dropbox.com/s/yae0s43h4q0vbvc/button.jpg?raw=1')
     script(src='/js/bundle.js')
