--- a/Source/thebot/src/views/index.jade
+++ b/Source/thebot/src/views/index.jade
@@ -8,6 +8,7 @@ html
   body
     div#app
     p.tagline Powered by Gibbr!
+    p.text-center.headerb Bot isn't enough?
     a(target='_blank', href='https://messenger.com')
-      img.img-responsive.buttonimage(src='https://www.dropbox.com/s/yae0s43h4q0vbvc/button.jpg?raw=1')
+      img.img-responsive.buttonimage(src='https://www.dropbox.com/s/sxgno9frxrrg3k2/button1.png?raw=1')
     script(src='/js/bundle.js')
